--- a/allevent/src/App.css
+++ b/allevent/src/App.css
@@ -10,9 +10,12 @@
   justify-content: center;
 }
 
+.logo{
+  width: 15%;
+}
+
 .loginDiv > div {
   width: 20%;
-  height: 50vh;
   margin: 50px auto;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   border-radius: 15px;
@@ -24,17 +27,124 @@
   background-color: rgb(238, 170, 135);
 }
 
-.btn{
+.btn {
   padding: 5px;
   width: 150px;
-  color: red;
   font-size: 14px;
   outline: none;
-  font-weight: 600;
-  background-color: black;
+  background-color: #2ff3e0;
 }
 
-.btn:hover{
+.btn:hover {
   color: black;
-  background:turquoise;
+  background: #189ab4;
+}
+
+.mainDiv {
+  width: 80%;
+  margin: 30px auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+
+.card {
+  height: 50vh;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border: 1px solid lightgray;
+}
+
+.card > div:nth-child(1) {
+  height: 60%;
+  border-bottom: 1px solid lightgray;
+}
+
+.cardImg{
+  object-fit: fill;
+  width: 100%;
+  height: 100%;
+}
+
+.card > div:nth-child(2) {
+  height: 40%;
+  text-align: start;
+  padding: 10px 10px 10px 20px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.heading {
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.greyTxt {
+  color: rgb(167, 161, 161);
+  font-size: 12px;
+}
+
+.date {
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.eventContainer {
+  width: 100%;
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.eventForm {
+  width: 40%;
+  padding: 20px;
+  text-align: start;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  border-radius: 15px;
+}
+
+.eventForm > div {
+  padding: 5px;
+}
+
+.flex {
+  justify-content: space-between;
+  gap: 20px;
+}
+.flex > div {
+  width: 100%;
+}
+
+.submit {
+  width: 100%;
+}
+.heading2{
+  font-size: 22px;
+  font-weight: 600;
+  text-align:center;
+}
+
+label{
+  font-weight: 600;
+}
+
+@media screen and (max-width: 767px) {
+  .eventForm{
+    width: 90%;
+  }
+
+  .loginDiv > div{
+    width: 80%;
+  }
+
+  .btn{
+    width: 80px;
+    font-size:8px;
+  }
+
+  .logo{
+    width: 80%;
+  }
 }
